--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,10 @@ VITE_FIREBASE_API_KEY=your_api_key_here
 VITE_FIREBASE_AUTH_DOMAIN=your_auth_domain_here
 VITE_FIREBASE_PROJECT_ID=your_project_id_here
 VITE_FIREBASE_STORAGE_BUCKET=your_storage_bucket_here
-VITE_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id_here
+VITE_FIREBASE_MESSAGING_SENDER_ID=your_sender_id_here
 VITE_FIREBASE_APP_ID=your_app_id_here
 
-# Microsoft OAuth Configuration (optional)
-# VITE_MICROSOFT_CLIENT_ID=your_microsoft_client_id_here
-# VITE_MICROSOFT_TENANT_ID=your_tenant_id_or_common
+# Microsoft OAuth Configuration (Optional)
+# These will be added after Azure AD app registration
+VITE_MICROSOFT_CLIENT_ID=your_microsoft_client_id_here
+VITE_MICROSOFT_TENANT_ID=your_microsoft_tenant_id_here
