--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,10 @@ Thumbs.db
 # Vite
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Debug logs
+*.log
+pglite-debug.log
+
+# Windows Zone.Identifier files
+*Zone.Identifier
